--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=tcp:kievgymsdbserver.database.windows.net,1433;Initial Catalog=KievGyms_db;User Id=@kievgymsdbserver;Password=GymPassword_123"
+    "DefaultConnection": "Server=WIN-HUNRDISTUA0\\MSSQLSERVER02; Database=GymDB; Trusted_Connection=True;MultipleActiveResultSets=true", //"Data Source=tcp:kievgymsdbserver.database.windows.net,1433;Initial Catalog=KievGyms_db;User Id=@kievgymsdbserver;Password=GymPassword_123"
+    "IdentityConnection": "Server=WIN-HUNRDISTUA0\\MSSQLSERVER02; Database=DBGymIdentity; Trusted_Connection=True; MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
